minor fixes for top buttons and dark mode

--- a/docs/test/css/style.css
+++ b/docs/test/css/style.css
@@ -20,6 +20,12 @@ html.test {
 	padding: 1.2rem 2.4rem 0 2.4rem;
 }
 
+@media (prefers-color-scheme: dark) {
+	.test header {
+		border-color: #f0f0f0;
+	}
+}
+
 @media (max-width: 575px) {
 	.test header {
 		margin-top: 12px;
@@ -46,9 +52,9 @@ html.test {
 	}
 }
 
-.test header p {
-	margin-top: 10px;
-	margin-top: 1rem;
+.test header a {
+	margin-right: 12px;
+	margin-right: 1.2rem;
 }
 
 @media (min-width: 600px) {
